Image: Fix Image Shape Alignment

--- a/widgets/image/styles/default.less
+++ b/widgets/image/styles/default.less
@@ -47,7 +47,7 @@
 		display: block;
 		height: @image_height;
 		mask-image: @image_shape;
-		mask-position: center;
+		mask-position: @image_shape_position;
 		mask-repeat: @image_shape_repeat;
 		mask-size: @image_shape_size;
 		max-width: @image_max_width;
